<?xml version="1.0"?>
<package>
  <name>supervisor_node</name>
  <version>0.0.1</version>
  <description>
    supervisior node generation 
  </description>
  <maintainer email="van@uni-bremen.de">Tina Van</maintainer>
  <license>none</license>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
